fix aviaries wrap

--- a/src/scss/MainSection.scss
+++ b/src/scss/MainSection.scss
@@ -15,6 +15,8 @@ $main-color: #567354;
     align-items: flex-start;
     .aviaries-header{
         position: relative;
+        overflow-y: hidden;
+        overflow-x: auto;
         width: 100%;
         min-height: 50px;
         height: 50px;
@@ -23,6 +25,9 @@ $main-color: #567354;
         justify-content: space-between;
         align-items: flex-end;
         padding-bottom: 10px;
+        &::-webkit-scrollbar{ 
+            display: none;
+        }
         .aviaries-swircher{
             display: flex;
             flex-direction: row;
@@ -38,6 +43,7 @@ $main-color: #567354;
                     font-weight: 300;
                     vertical-align: middle;
                     transition: all .5S;
+                    white-space: nowrap;
                 }
                 &:hover{
                     cursor: pointer;
